--- a/dev-cpp/TheForgottenServer_private.rc
+++ b/dev-cpp/TheForgottenServer_private.rc
@@ -3,9 +3,8 @@
 
 #include <windows.h> // include for version info constants
 
-#include "../src/gui_resources.rc"
 
-A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "TheForgottenServer-console-debug.ico"
+A ICON MOVEABLE PURE LOADONCALL DISCARDABLE "TheForgottenServer.ico"
 
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
